# Bare-Metal-Automation

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  firmware_catalogue.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/group_vars/: all.yml
ansible/host_vars/: dc01.yml
ansible/playbooks/: network_device_mgmt.yml  phase9_software.yml
configs/: firmware_catalogue.yaml
configs/firmware/: catalog.yaml
configs/inventory/: inventory.example.yaml
configs/templates/firewalls/: perimeter-router-ha.j2  perimeter-router.j2
configs/templates/routers/: distribution-router.j2  wan-router.j2
configs/templates/servers/: bios-config.j2  ilo-config.j2
configs/templates/switches/: access.j2  core-ha.j2  core.j2  distribution.j2
dashboard/: README.md  conftest.py
dashboard/config/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/deploy/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
dashboard/deploy/api/: serializers.py  urls.py  views.py
dashboard/deploy/migrations/: 0001_initial.py
dashboard/fleet/: admin.py  apps.py  models.py  urls.py  views.py
dashboard/fleet/migrations/: 0001_initial.py
dashboard/static/css/: traffic-lights.css
dashboard/static/js/: device-grid.js  phase-tracker.js
dashboard/templates/: base.html
docs/: CONVERSATION_HISTORY.md  ROADMAP.md
orchestrator/: __init__.py  fleet_scan.py  orchestrate.py  site_generate.py  site_regenerate.py  validators.py
scripts/: deploy_netbox.sh
site_templates/: large-site.yaml  medium-site.yaml  small-site.yaml
site_templates/cabling/: large-site.yaml  medium-site.yaml  small-site.yaml
src/bare_metal_automation/: cli.py  inventory.py  models.py  orchestrator.py  settings.py
src/bare_metal_automation/cabling/: adapter.py  diff.py  intent.py  report.py  validator.py
src/bare_metal_automation/common/: checkpoint.py  parallel.py  services.py
src/bare_metal_automation/config_media/: __init__.py  bundle_packager.py  firmware_catalogue.py  generate.py  inventory_export.py  media_collector.py  renderer.py
src/bare_metal_automation/configurator/: firmware.py  network.py  validator.py
src/bare_metal_automation/dashboard/: api_client.py  apps.py  asgi.py  consumers.py  deployment.py  events.py  firmware_views.py  inventory_validation.py  models.py  prepare.py  rollback.py  routing.py  settings.py  simulation.py  urls.py  views.py  wsgi.py
src/bare_metal_automation/discovery/: cdp.py  dhcp.py  engine.py  matcher.py  serial.py
src/bare_metal_automation/drivers/: __init__.py  base.py  registry.py
src/bare_metal_automation/factory_reset/: __init__.py  certificate.py  reset.py  sanitise.py
src/bare_metal_automation/firmware/: __init__.py  catalog.py  compliance.py  tester.py
src/bare_metal_automation/netbox/: __init__.py  client.py  git.py  loader.py  mapper.py
src/bare_metal_automation/provisioner/: ilo.py  installer.py  meinberg.py  pxe.py  redfish.py  server.py
src/bare_metal_automation/resetter/: __init__.py  meinberg.py  network.py  server.py
src/bare_metal_automation/rollback/: meinberg.py  network.py  orchestrator.py  server.py
src/bare_metal_automation/topology/: builder.py  graph.py  ordering.py  visualise.py
src/bare_metal_automation/vinfra/: __init__.py
src/ztp_forge/: cli.py  inventory.py  models.py  orchestrator.py
src/ztp_forge/cabling/: validator.py
tests/dashboard/: test_api.py  test_ingest_bundle.py  test_models.py
tests/unit/: test_cabling.py  test_checkpoint.py  test_config_media.py  test_discovery.py  test_driver_registry.py  test_firmware.py  test_netbox.py  test_provisioner.py  test_resetter.py  test_rollback.py  test_settings.py  test_topology.py
(+156 files in other folders)
