[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bare-metal-automation"
version = "0.1.0"
description = "Zero-Touch Provisioning for bare-metal infrastructure deployments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Marco" },
]

dependencies = [
    "click>=8.1,<9",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "netmiko>=4.3,<5",
    "paramiko>=3.4,<4",
    "networkx>=3.2,<4",
    "ansible-runner>=2.3,<3",
    "requests>=2.31,<3",
    "django>=5.0,<6",
    "channels>=4.0,<5",
    "channels-redis>=4.2,<5",
    "daphne>=4.1,<5",
    "djangorestframework>=3.15,<4",
    "django-filter>=24.1,<25",
    "rich>=13.7,<14",
    "pydantic>=2.5,<3",
    "pyserial>=3.5,<4",
    "pynetbox>=7.3,<8",
    "tabulate>=0.9,<1",
    "semver>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-cov>=4.1,<6",
    "pytest-asyncio>=0.23,<1",
    "pytest-django>=4.8,<5",
    "ruff>=0.15,<0.16",
    "mypy>=1.8,<2",
    "pre-commit>=3.6,<4",
]

[project.scripts]
bare-metal-automation   = "bare_metal_automation.cli:main"
bma-site-generate       = "orchestrator.site_generate:main"
bma-site-regenerate     = "orchestrator.site_regenerate:main"
bma-fleet-scan          = "orchestrator.fleet_scan:main"
bma-orchestrate         = "orchestrator.orchestrate:main"
bma-generate            = "bare_metal_automation.config_media.generate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bare_metal_automation", "orchestrator"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
DJANGO_SETTINGS_MODULE = "config.settings"
